one visual fix - about right spacing

--- a/src/Home/About.module.scss
+++ b/src/Home/About.module.scss
@@ -43,7 +43,7 @@
 
   .aboutText{
     width: 40vw;
-    margin: 0em 1em 0 auto; //main left right space
+    margin: 0em 3em 0 auto; //main left right space
     padding-top: 20vw; //main top space (yes, vw is intentional to keep earth in frame)
     h4{
       font-weight: 800;
